fix homepage color contrast

--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ a:hover { color: #e07b7b; }
 	color: black;
 	right:    10px;
 	bottom:   10px;
-	background-color: #1843bb8f;
+	background-color: #5c7bce8f;
 	border-radius: 10px;
 	padding-left: 15px;
 	padding-right: 15px;
@@ -258,7 +258,7 @@ a:hover { color: #e07b7b; }
 	position: relative;
 	top: 0;
 	left: 0;
-	background-color: #004a4a83;
+	background-color: #76bfbf83;
 }
 
 
